--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.database.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://projectz-stocksim-db.chsesjujswlg.us-east-2.rds.amazonaws.com:5432/stocksim_zbase
-
+spring.datasource.username=oneplustwo
+spring.datasource.password=xiezihan19
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto = validate
